syntax = "proto3";
import "celaut.proto";

package dataset;

message Data {
    float score = 1;
    int32 index = 2;
}

message SolverWithConfig {
    celaut.Any.Metadata meta = 1;
    celaut.Service definition = 2;
    map<string, bytes> enviroment_variables = 3;
}

message DataSetInstance {
    map<string, Data> data = 1;
}

message DataSet {
    // identifica el Solver con una configuracion determinada.( hash.value.hex() ) de sha3-256
    map<string, DataSetInstance> data = 1;
}